# Dynamic-Memory-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DynMem/: CMakeLists.txt
DynMem/Headers/: CMakeLists.txt
DynMem/Headers/common/: CMakeLists.txt  defines.h  export.h  standard_includes.h  types.h
DynMem/Headers/dynmem/: CMakeLists.txt  defines.h  dynmem.h
DynMem/Headers/dynmem/common/: CMakeLists.txt  defines.h  standard_includes.h  types.h
DynMem/Headers/dynmem/utility/: CMakeLists.txt  allocate.h  defines.h  set-get.h  stack-queue.h  utility.h
DynMem/Headers/utility/: CMakeLists.txt  defines.h  utility.h
DynMem/Sources/: CMakeLists.txt
DynMem/Sources/dynmem/: CMakeLists.txt  allocate.c  copy-insert.c  copy.c  dynmem.c  set-get.c  stack-queue.c
DynMem/Sources/dynmem/utility/: CMakeLists.txt  allocate.c  set-get.c  stack-queue.c  utility.c
DynMem/Sources/utility/: CMakeLists.txt  utility.c
Examples/: CMakeLists.txt  example_01.c  example_02.c  foreach-iterator.c
Tests/: test.c
Tests/dynmem/: CMakeLists.txt  DynMemAllocate.c  DynMemAppend.c  DynMemAppendArray.c  DynMemAppendValues.c  DynMemCopy.c  DynMemCopyExceptValues.c  DynMemCopyInitial.c  DynMemDeallocate.c  DynMemDeduct.c  DynMemDeductFront.c  DynMemDeductValues_s.c  DynMemGet.c  DynMemGetBegin.c  DynMemGetElementSize.c  DynMemGetEnd.c  DynMemGetEndIndex.c  DynMemGetEndIndex_s.c  DynMemGetHeapPointer.c  DynMemGetHeapSize.c  DynMemGetLength.c  DynMemGetPointer.c  DynMemGetSize.c  DynMemGetValueAt.c  DynMemGetValues.c  DynMemGetValues_s.c  DynMemGet_s.c  DynMemPrepend.c  DynMemPrependArray.c  DynMemPrependValues.c  DynMemReduce.c  DynMemReduce_s.c  DynMemReset.c  DynMemResetMemory.c  DynMemSet.c  DynMemSetElementSize.c  DynMemSetForAppending.c  DynMemSetForPrepending.c  DynMemSetValueAt.c  DynMemSetValues.c  (+7 more)
Tests/dynmem/utility/: CMakeLists.txt  DynMemUtilityAppend.c  DynMemUtilityGet.c  DynMemUtilityGetValues.c  DynMemUtilityPrepend.c  DynMemUtilityReduce.c  DynMemUtilityReduceToMemory.c  DynMemUtilityResetMemory.c  DynMemUtilitySet.c  DynMemUtilitySetMemory.c  DynMemUtilitySetMemoryBlock.c  DynMemUtilitySetMemoryBlockReverse.c  DynMemUtilitySetValues.c
Tests/utility/: CMakeLists.txt  DynMemUtilityResetMemory.c  DynMemUtilitySetMemory.c  DynMemUtilitySetMemoryBlock.c  DynMemUtilitySetMemoryBlocks.c
cmake/: Config.cmake.in
config/: CMakeLists.txt  memConfig.h.in
examples/: CMakeLists.txt  ex01_MemLibVersion.c  ex01_allocMem.c  ex02_AllocMem.c  ex02_setMem.c  ex03_ResizeMem.c  ex03_getMemExtraInfo.c  ex04_FreeMem.c  ex04_cpyMem.c  ex05_MemSize.c  ex06_ClrMem.c  ex07_SetMem.c  ex08_CpyMem.c  ex09_ApnMem.c  ex10_MemInfoSize.c  ex11_GetMemInfo.c  ex12_FastFuncs.c  ex1_allocMem.c
include/: CMakeLists.txt
include/mem/: CMakeLists.txt  _fast.h  _mem.h  defs.h  mem.h
src/: CMakeLists.txt  mem.c  util.c  util.h
src/mem/: CMakeLists.txt  _fast.c  _mem.c  mem.c
src/util/: CMakeLists.txt  util.c  util.h
tests/: CMakeLists.txt
tests/t01_MemLibVersion/: CMakeLists.txt  main.c
tests/t02_AllocMem/: CMakeLists.txt  main.c
tests/t03_ReallocMem/: CMakeLists.txt  main.c
tests/t04_FreeMem/: CMakeLists.txt  main.c
tests/t05_MemSize/: CMakeLists.txt  main.c
